[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nmaping"
version = "1.1"
authors = [
    { name="Abu Tanim", email="mrtanvai@gmail.com" },
]
description = "An automation and network scanning utility tool."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Custom License" }

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/mrtan-official/Nmap-scaning"

[tool.setuptools.packages.find]
where = ["."]
include = ["nmaping*"]

[tool.setuptools.package-data]
nmaping = ["*.so"]

[project.scripts]
nmaping = "nmaping.nmap:menu"
