[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nmaping"
version = "1.6"
authors = [
    { name="Abu Tanim", email="mrtanvai@gmail.com" },
]
description = "Python Nmap automation tool for network scanning and security auditing."
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "requests",
]

license = { text = "MIT" }

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/mrtan-official/nmaping"

[tool.setuptools.packages.find]
where = ["."]
include = ["nmaping*"]

[tool.setuptools.package-data]
nmaping = ["*.txt", "*.md"]

[project.scripts]
nmaping = "nmaping.nmap:menu"
