[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nmaping"
version = "1.8"
authors = [
    { name="Abu Tanim", email="mrtanvai@gmail.com" },
]
description = "An automation and network scanning utility tool."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests",
]
license = { text = "Custom License" }

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/mrtan-official/nmaping"

[tool.setuptools.packages.find]
where = ["."]
include = ["nmaping*"]

[tool.setuptools.package-data]
nmaping = ["*.so"]

[project.scripts]
nmaping = "nmaping.nmap:menu"
